styles.css
.dark-mode{
    background-color: #121212;
    color: #eaeaea;
}
body.dark-mode h1, .list-group-item{
    color: #eaeaea;
}
body:not(.dark-mode) .list-group-item{
    color: #121212;
}
.dark-mode .card{
    background-color: #1e1e1e;
}
.dark-mode .list-group-item{
    background-color: #1e1e1e;
    border-color: #2a2a2a;
}
.dark-mode .text-muted{
    color: #b0b0b0 !important;
}
.dark-mode .badge{
    background-color: #0d6efd;
}
body.dark-mode .list-group-item:hover{
    color: #121212;
}

